--- a/front_end/helloapp/package.json
+++ b/front_end/helloapp/package.json
@@ -18,6 +18,7 @@
         "@types/chart.js": "^2.7.6",
         "chart.js": "^2.7.1",
         "core-js": "^2.4.1",
+        "jquery": "^3.3.1",
         "rxjs": "^5.5.2",
         "zone.js": "^0.8.14"
     },
