--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,93 +1,49 @@
-# This file is a template, and might need editing before it works on your project.
-image: ayufan/openshift-cli
-
-stages:
-  - test
-  - review
-  - staging
-  - production
-  - cleanup
+image: docker:latest
+services:
+  - docker:dind
 
 variables:
-  # OPENSHIFT_SERVER: openshift.default.svc.cluster.local
-  # OPENSHIFT_DOMAIN: apps.example.com
-  # Configure this variable in Secure Variables:
-  # OPENSHIFT_TOKEN: my.openshift.token
+  DOCKER_DRIVER: overlay
+  SPRING_PROFILES_ACTIVE: gitlab-ci
+  APP: $CI_PROJECT_NAME-app
+  PROJ_NAME: $CI_PROJECT_NAME
+  DB: ignite
 
-test1:
-  stage: test
-  before_script: []
+stages:
+  - build
+  - package
+  - deploy
+
+maven-build:
+  image: maven:3-jdk-8
+  stage: build
+  script: "mvn package -B"
+  artifacts:
+    paths:
+      - target/*.jar
+
+docker-build:
+  stage: package
   script:
-    - echo run tests
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+  - docker build -t registry.gitlab.com/nc-edu/service-bus:app .
+  - docker push registry.gitlab.com/nc-edu/service-bus:app
 
-test2:
-  stage: test
-  before_script: []
-  script:
-    - echo run tests
-
-.deploy: &deploy
+k8s-deploy:
+  image: ayufan/openshift-cli
+  stage: deploy
   before_script:
-    - oc login "$OPENSHIFT_SERVER" --token="$OPENSHIFT_TOKEN" --insecure-skip-tls-verify
-    - oc project "$CI_PROJECT_NAME-$CI_PROJECT_ID" 2> /dev/null || oc new-project "$CI_PROJECT_NAME-$CI_PROJECT_ID"
+    - oc login $OPENSHIFT_URL --token=$OPENSHIFT_TOKEN --insecure-skip-tls-verify
+    - oc project $PROJ_NAME 2> /dev/null || oc new-project $PROJ_NAME
   script:
-    - "oc get services $APP 2> /dev/null || oc new-app . --name=$APP --strategy=docker"
-    - "oc start-build $APP --from-dir=. --follow || sleep 3s && oc start-build $APP --from-dir=. --follow"
-    - "oc get routes $APP 2> /dev/null || oc expose service $APP --hostname=$APP_HOST"
-
-review:
-  <<: *deploy
-  stage: review
-  variables:
-    APP: review-$CI_COMMIT_REF_NAME
-    APP_HOST: $CI_PROJECT_NAME-$CI_ENVIRONMENT_SLUG.$OPENSHIFT_DOMAIN
-  environment:
-    name: review/$CI_COMMIT_REF_NAME
-    url: http://$CI_PROJECT_NAME-$CI_ENVIRONMENT_SLUG.$OPENSHIFT_DOMAIN
-    on_stop: stop-review
-  only:
-    - branches
-  except:
-    - master
-
-stop-review:
-  <<: *deploy
-  stage: cleanup
-  script:
-    - oc delete all -l "app=$APP"
-  when: manual
-  variables:
-    APP: review-$CI_COMMIT_REF_NAME
-    GIT_STRATEGY: none
-  environment:
-    name: review/$CI_COMMIT_REF_NAME
-    action: stop
-  only:
-    - branches
-  except:
-    - master
-
-staging:
-  <<: *deploy
-  stage: staging
-  variables:
-    APP: staging
-    APP_HOST: $CI_PROJECT_NAME-staging.$OPENSHIFT_DOMAIN
-  environment:
-    name: staging
-    url: http://$CI_PROJECT_NAME-staging.$OPENSHIFT_DOMAIN
-  only:
-    - master
-
-production:
-  <<: *deploy
-  stage: production
-  variables:
-    APP: production
-    APP_HOST: $CI_PROJECT_NAME.$OPENSHIFT_DOMAIN
-  when: manual
-  environment:
-    name: production
-    url: http://$CI_PROJECT_NAME.$OPENSHIFT_DOMAIN
-  only:
-    - master
+    - oc delete all --all
+    - oc delete all -l app=$APP
+    - oc delete all --selector app=$APP
+    - oc delete secrets --all
+    - oc secrets new-dockercfg registry --docker-server=registry.gitlab.com/nc-edu/service-bus --docker-username=$GITLAB_USER --docker-password=$GITLAB_PASS --docker-email=$GITLAB_EMAIL
+    - oc secrets new-dockercfg app --docker-server=gitlab.com --docker-username=$GITLAB_USER --docker-password=$GITLAB_PASS --docker-email=$GITLAB_EMAIL
+    - oc secrets add serviceaccount/default secrets/registry --for=pull
+    - oc secrets add serviceaccount/default secrets/app --for=pull
+    - oc get services $APP 2> /dev/null || oc new-app --name=$APP --docker-image="registry.gitlab.com/nc-edu/service-bus:app"
+    - oc create route edge nc --service=$APP
+    - oc get routes
