--- a/front_end/helloapp/package.json
+++ b/front_end/helloapp/package.json
@@ -19,6 +19,7 @@
         "chart.js": "^2.7.1",
         "core-js": "^2.4.1",
         "jquery": "^3.3.1",
+        "ngx-cookie-service": "^1.0.10",
         "rxjs": "^5.5.2",
         "zone.js": "^0.8.14"
     },
