--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -8,6 +8,7 @@
         "build": "webpack"
     },
     "dependencies": {
+        "@angular/animations": "^5.2.1",
         "@angular/common": "~5.0.0",
         "@angular/compiler": "~5.0.0",
         "@angular/core": "~5.0.0",
