--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #spring.mvc.view.prefix= /WEB-INF/pages/
 #spring.mvc.view.suffix= .jsp
 server.port=8090
+server.connection-timeout=-1
 
 jwt.secret_key=service-bus-secret-key
 jwt.token_validity=1800
